--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-# --- Dependency (WAJIB DI-IGNORE) ---
+# --- Dependency (Wajib) ---
 node_modules/
 
-# --- System Files (Sampah Laptop) ---
+# --- Environment Variables (SANGAT RAHASIA) ---
+.env
+
+# --- System Files (Sampah) ---
 .DS_Store
 Thumbs.db
 
-# --- Log Files (Opsional) ---
+# --- Log Files ---
 npm-debug.log
+*.log
